initial implementation and basic demo

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 
-  jquery.loadInline: make links and forms load content inline via ajax
+  jquery.loadInline: have links and forms load content inline via ajax
 
 
